feat: generate kubeconfig on the fly on request
This extracts admin kubeconfig generation out of bootkube, now based on
Talos x509 library. On each API request for `kubeconfig`, config is
generated on the fly and sent back on the wire.

This fixes two issues:

* any master node can now generate `kubeconfig` (worker nodes can do
that too, but that should probably change in the future)
* after upgrade-and-wipe the disk scenario, `osctl kubeconfig` still
works

Signed-off-by: Andrey Smirnov <smirnov.andrey@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ controlplane.yaml
 join.yaml
 docgen
 talosconfig
-kubeconfig
+/kubeconfig
 hack/test/libvirt/matchbox/assets/*
 !hack/test/libvirt/matchbox/assets/.gitkeep
 
